--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -3,34 +3,38 @@
 }
 
 .main {
-  min-height: 100vh;
-  padding: 4rem 0;
-  flex: 1;
   display: flex;
+  align-items: center;
+  flex: 1;
   flex-direction: column;
   justify-content: center;
-  align-items: center;
+
+  min-height: 100vh;
+  padding: 4rem 0;
 }
 
 .footer {
   display: flex;
-  flex: 1;
-  padding: 2rem 0;
-  border-top: 1px solid #eaeaea;
-  justify-content: center;
   align-items: center;
+  flex: 1;
+  justify-content: center;
+
+  padding: 2rem 0;
+
+  border-top: 1px solid #eaeaea;
 }
 
 .footer a {
   display: flex;
-  justify-content: center;
   align-items: center;
   flex-grow: 1;
+  justify-content: center;
 }
 
 .title a {
-  color: #0070f3;
   text-decoration: none;
+
+  color: #0070f3;
 }
 
 .title a:hover,
@@ -41,8 +45,9 @@
 
 .title {
   margin: 0;
-  line-height: 1.15;
+
   font-size: 4rem;
+  line-height: 1.15;
 }
 
 .title,
@@ -52,37 +57,43 @@
 
 .description {
   margin: 4rem 0;
-  line-height: 1.5;
+
   font-size: 1.5rem;
+  line-height: 1.5;
 }
 
 .code {
-  background: #fafafa;
-  border-radius: 5px;
   padding: 0.75rem;
+
+  border-radius: 5px;
+  background: #fafafa;
+
+  font-family: Menlo, Monaco, Lucida-Console, Liberation-Mono, DejaVu-Sans-Mono,
+    Bitstream-Vera-Sans-Mono, Courier-New, monospace;
   font-size: 1.1rem;
-  font-family: Menlo, Monaco, Lucida Console, Liberation Mono, DejaVu Sans Mono,
-    Bitstream Vera Sans Mono, Courier New, monospace;
 }
 
 .grid {
   display: flex;
   align-items: center;
-  justify-content: center;
   flex-wrap: wrap;
+  justify-content: center;
+
   max-width: 800px;
 }
 
 .card {
+  max-width: 300px;
   margin: 1rem;
   padding: 1.5rem;
+
+  transition: color 0.15s ease, border-color 0.15s ease;
   text-align: left;
-  color: inherit;
   text-decoration: none;
+
+  color: inherit;
   border: 1px solid #eaeaea;
   border-radius: 10px;
-  transition: color 0.15s ease, border-color 0.15s ease;
-  max-width: 300px;
 }
 
 .card:hover,
@@ -93,12 +104,14 @@
 }
 
 .card h2 {
-  margin: 0 0 1rem 0;
+  margin: 0 0 1rem;
+
   font-size: 1.5rem;
 }
 
 .card p {
   margin: 0;
+
   font-size: 1.25rem;
   line-height: 1.5;
 }
@@ -110,7 +123,8 @@
 
 @media (max-width: 600px) {
   .grid {
-    width: 100%;
     flex-direction: column;
+
+    width: 100%;
   }
 }
