--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,29 +1,30 @@
 html,
 body {
-  margin: 0;
-  padding: 0;
-  color: var(--black);
-  background: #e5e5e5;
-  font-family: 'Noto Sans', sans-serif;
+    margin: 0;
+    padding: 0;
+    color: var(--black);
+    background: #e5e5e5;
+    font-family: 'Noto Sans', sans-serif;
 }
 
 a {
-  text-decoration: none;
-  color: inherit;
+    text-decoration: none;
+    color: inherit;
 }
 
 * {
-  box-sizing: border-box;
+    box-sizing: border-box;
 }
 
 :root {
-  --black: #3b434e;
-  --gray-light: #ebebeb;
-  --white: #fff;
-  --primary: #7653fc;
-  --primary-hover: #6344df;
-  --red: #fc836d;
-  --green: #1dc37e;
-  --green-light: #c8f8e4;
-  --font-family: 'Noto Sans', sans-serif;
+    --black: #3b434e;
+    --gray-light: #ebebeb;
+    --gray-dark: #787d85;
+    --white: #fff;
+    --primary: #7653fc;
+    --primary-hover: #6344df;
+    --red: #fc836d;
+    --green: #1dc37e;
+    --green-light: #c8f8e4;
+    --font-family: 'Noto Sans', sans-serif;
 }
