--- a/layout/Menu/Menu.module.css
+++ b/layout/Menu/Menu.module.css
@@ -32,15 +32,25 @@
     margin-bottom: 10px;
     cursor: pointer;
     text-transform: uppercase;
-    color: var(--gray-dark);
+    /*color: var(--gray-dark);*/
+    color: red;
     font-weight: 300;
     font-size: 12px;
     line-height: 16px;
 }
 
+.secondLevelBlock {
+    display: none;
+}
+
+.secondLevelBlockOpened {
+    display: block;
+}
+
 .secondLevelBlockOpened:last-child {
     margin-bottom: 20px;
 }
+
 
 .thirdLevel {
     margin-bottom: 10px;
