--- a/layout/Layout.module.css
+++ b/layout/Layout.module.css
@@ -3,7 +3,7 @@
   grid-template-columns: minmax(50px, auto) 230px minmax(320px, 1200px) auto;
   grid-template-rows: auto 1fr auto;
   min-height: 100vh;
-  gap: 0 30px;
+  gap: 40px 30px;
   grid-template-areas:
     '. header header .'
     '. sidebar body .'
@@ -32,10 +32,16 @@
     grid-template-columns: minmax(320px, 1fr);
     grid-template-areas: 'header' 'body' 'footer';
   }
+
   .sidebar {
-    display: none;
+    display: none !important;
   }
+
   .header {
     display: block;
+  }
+
+  .body {
+    padding: 20px;
   }
 }
